--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   clickhouse-server:
     image: clickhouse/clickhouse-server:latest
@@ -6,8 +7,9 @@ services:
       - "9000:9000"
       - "8123:8123"  # HTTP порт для ClickHouse
     volumes:
-      - ./db/data/migrations:/docker-entrypoint-initdb.d  # Папка с миграциями
-      - ./db/data:/data  # Папка с вашим файлом
+     - ./db/cmd:/docker-entrypoint-initdb.d
+     - ./db/data:/var/lib/clickhouse/user_files/data
+     - ./db/migrations:/var/lib/clickhouse/user_files/migrations
     restart: always
 
   clickhouse-client:
